--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ build_app:
     stage: build
     script:
         - export GO15VENDOREXPERIMENT=1
+        - ls -lRa /builds/
         - mkdir -p /go/src/umputun.com
         - cd /go/src/umputun.com/ureadability
         - go get -v
