--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build_app:
     script:
         - export GO15VENDOREXPERIMENT=1
         - mkdir -p /go/src/umputun.com
-        - ls -s /builds/ukeeper/ureadability /go/src/umputun.com/ureadability
+        - ln -s /builds/ukeeper/ureadability /go/src/umputun.com/ureadability
         - cd /go/src/umputun.com/ureadability
         - go get -v
         - go get -t ./...
