switched to local TZ and local user

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,12 @@
 FROM golang
 
+# add user and set TZ
+RUN \
+ adduser --disabled-password  --gecos "" -u 1001 umputun && \
+ echo "America/Chicago" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata && \
+ chown -R umputun:umputun /srv
+
+
 ADD . /go/src/umputun.com/ukeeper/ureadability/app
 ENV GO15VENDOREXPERIMENT=1
 RUN \
@@ -9,4 +16,6 @@ RUN \
  rm -rf /go/src/*
 
 EXPOSE 8080
+USER umputun
+WORKDIR /srv
 ENTRYPOINT ["/srv/ureadability"]
