--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,71 @@
-server:
+version: '2'
+services:
+  server:
     build: app
-    log_driver: "json-file"
-    log_opt:
-        max-size: "10m"
+    logging:
+      driver: json-file
+      options:
+        max-size: "20m"
         max-file: "5"
     hostname: ureadability
     restart: always
     container_name: ureadability
 
     links:
-        - mongo
+      - mongo
 
     environment:
-        - MONGO=mongo
-        - MONGO_PASSWD=Squid3kIc6Dew4ad8Ci5
-        - MONGO_DELAY=10
+      - MONGO=mongo
+      - MONGO_PASSWD=Squid3kIc6Dew4ad8Ci5
+      - MONGO_DELAY=10
 
     ports:
-        - 8080
+      - 8080
 
-webapp:
+  webapp:
     image: igoradamenko/ureadability-ui
-    log_driver: "json-file"
+    logging:
+      driver: json-file
+      options:
+        max-size: "20m"
+        max-file: "5"
     hostname: ureadability-ui
     container_name: ureadability-ui
 
-nginx:
+  nginx:
     build: nginx
     restart: always
     hostname: nginx
     container_name: ureadability-nginx
+    logging:
+      driver: json-file
+      options:
+        max-size: "20m"
+        max-file: "5"
 
     links:
-        - server:ureadability
-        - webapp
+      - server:ureadability
+      - webapp
     ports:
-        - "8781:80"
+      - "8781:80"
     volumes_from:
-        - webapp:ro
+      - webapp:ro
     environment:
-        - NGINX_ADMIN=admin:$$apr1$$pDxqiBaw$$ZarbwfQAjupM3Tg9r/XcR0
-        - NGINX_TEST=test:$$apr1$$5s9yoqp3$$NdZSCZr7VTmLEc8Bv/bmq1
+      - NGINX_ADMIN=admin:$$apr1$$pDxqiBaw$$ZarbwfQAjupM3Tg9r/XcR0
+      - NGINX_TEST=test:$$apr1$$5s9yoqp3$$NdZSCZr7VTmLEc8Bv/bmq1
 
-mongo:
+  mongo:
     image: umputun/mongo-auth
-    log_driver: "json-file"
+    logging:
+      driver: json-file
+      options:
+        max-size: "20m"
+        max-file: "5"
     hostname: mongo
     restart: always
     container_name: ureadability-mongo
 
     environment:
-        - MONGO_PASSWD=Squid3kIc6Dew4ad8Ci5
+      - MONGO_PASSWD=Squid3kIc6Dew4ad8Ci5
     volumes:
-        - /tmp/mongodb:/data/db
+      - /tmp/mongodb:/data/db
