--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,42 +19,10 @@ services:
       - MONGO=mongo
       - MONGO_PASSWD=Squid3kIc6Dew4ad8Ci5
       - MONGO_DELAY=10
-      - CREDS=test:$$apr1$q0x6vkft$$s9Lg0jra3GpJ3St0ogepy/
+      - CREDS=test:l4!AzQVW1dSN0T^7IJGn&Kr!kwRSF2P1
 
     ports:
-      - "8080"
-
-  webapp:
-    image: igoradamenko/ureadability-ui
-    logging:
-      driver: json-file
-      options:
-        max-size: "20m"
-        max-file: "5"
-    hostname: ureadability-ui
-    container_name: ureadability-ui
-
-  nginx:
-    build: nginx
-    restart: always
-    hostname: nginx
-    container_name: ureadability-nginx
-    logging:
-      driver: json-file
-      options:
-        max-size: "20m"
-        max-file: "5"
-
-    links:
-      - server:ureadability
-      - webapp
-    ports:
-      - "8781:80"
-    volumes_from:
-      - webapp:ro
-    environment:
-      - NGINX_ADMIN=admin:$$apr1$$pDxqiBaw$$ZarbwfQAjupM3Tg9r/XcR0
-      - NGINX_TEST=test:$$apr1$$5s9yoqp3$$NdZSCZr7VTmLEc8Bv/bmq1
+      - "8080:8080"
 
   mongo:
     image: mongo:4.4
