--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
           go-version: 1.16
         id: go
 
+      - name: launch mongodb
+        uses: wbari/start-mongoDB@v0.2
+        with:
+          mongoDBVersion: "5.0"
+
       - name: checkout
         uses: actions/checkout@v2
 
@@ -27,6 +32,7 @@ jobs:
           go build -race
         env:
           TZ: "America/Chicago"
+          ENABLE_MONGO_TESTS: "true"
 
       - name: install golangci-lint and goveralls
         run: |
