--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - mongo
 
     environment:
-      - MONGO_URI=mongodb://root:Squid3kIc6Dew4ad8Ci5@mongo
+      - MONGO_URI=mongodb://root:Squid3kIc6Dew4ad8Ci5
       - MONGO_DELAY=10s
       - CREDS=test:l4!AzQVW1dSN0T^7IJGn&Kr!kwRSF2P1
 
@@ -40,6 +40,8 @@ services:
 
     environment:
       - MONGO_INITDB_DATABASE=admin
+      # uncomment port and comment the next two lines to have mongodb ready for tests,
+      # by running `ENABLE_MONGO_TESTS=true go test ./...`
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=Squid3kIc6Dew4ad8Ci5
     volumes:
