consistent app name, fix mongo setup in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - mongo
 
     environment:
-      - MONGO_URI=mongodb://root:Squid3kIc6Dew4ad8Ci5
+      - MONGO_URI=mongodb://root:Squid3kIc6Dew4ad8Ci5@mongo:27017
       - MONGO_DELAY=10s
       - CREDS=test:l4!AzQVW1dSN0T^7IJGn&Kr!kwRSF2P1
 
@@ -35,14 +35,15 @@ services:
     container_name: ureadability-mongo
 
     # uncomment to make mongo available for tests
-    ports:
-      - "27017:27017"
+    #ports:
+    #  - "27017:27017"
 
     environment:
       - MONGO_INITDB_DATABASE=admin
-      # uncomment port and comment the next two lines to have mongodb ready for tests,
-      # by running `ENABLE_MONGO_TESTS=true go test ./...`
-#      - MONGO_INITDB_ROOT_USERNAME=root
-#      - MONGO_INITDB_ROOT_PASSWORD=Squid3kIc6Dew4ad8Ci5
+      # comment the next two lines to have mongodb ready for tests,
+      # then start them by running
+      # `ENABLE_MONGO_TESTS=true go test ./...`
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=Squid3kIc6Dew4ad8Ci5
     volumes:
       - /tmp/mongodb:/data/db
