--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set up go 1.17
-        uses: actions/setup-go@v2
+      - name: set up go 1.18
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.17
+          go-version: 1.18
         id: go
 
       - name: launch mongodb
@@ -23,7 +23,7 @@ jobs:
           mongoDBVersion: "5.0"
 
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: build and test
         working-directory: backend
@@ -34,13 +34,15 @@ jobs:
           TZ: "America/Chicago"
           ENABLE_MONGO_TESTS: "true"
 
-      - name: install golangci-lint and goveralls
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          working-directory: backend
+
+      - name: install goveralls
         run: |
-          curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $GITHUB_WORKSPACE v1.50.0
-          GO111MODULE=off go get -u -v github.com/mattn/goveralls
-      - name: run linters
-        working-directory: backend
-        run: $GITHUB_WORKSPACE/golangci-lint run --out-format=github-actions
+          go install github.com/mattn/goveralls@latest
 
       - name: submit coverage
         run: $(go env GOPATH)/bin/goveralls -service="github" -coverprofile=$GITHUB_WORKSPACE/profile.cov
