--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set up go 1.18
+      - name: set up go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.18
+          go-version: "1.20"
         id: go
 
       - name: launch mongodb
@@ -40,12 +40,10 @@ jobs:
           version: latest
           working-directory: backend
 
-      - name: install goveralls
+      - name: submit coverage
         run: |
           go install github.com/mattn/goveralls@latest
-
-      - name: submit coverage
-        run: $(go env GOPATH)/bin/goveralls -service="github" -coverprofile=$GITHUB_WORKSPACE/profile.cov
+          goveralls -service="github" -coverprofile=$GITHUB_WORKSPACE/profile.cov
         working-directory: backend
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
