--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,23 +9,23 @@
     "url": "git+https://github.com/igoradamenko/ureadability-ui.git"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.5",
+    "autoprefixer": "^10.4.19",
     "browser-sync": "^3.0.2",
     "del": "^7.1.0",
+    "fancy-log": "^2.0.0",
     "gulp": "^5.0.0",
-    "gulp-add-src": "^1.0.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-css-url-adjuster": "^0.2.3",
+    "gulp-cached": "^1.1.1",
+    "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
-    "gulp-if": "^3.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.5",
+    "merge-stream": "^2.0.0",
     "node-sass-import-once": "^1.2.0",
     "sass": "^1.77.4"
   },
+  "browserslist": [
+    "> 1%"
+  ],
   "scripts": {}
 }
