Switch the main page to HTMX

--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -4,10 +4,10 @@ run:
 linters:
   enable:
     - bodyclose
+    - copyloopvar
     - dogsled
     - dupl
     - errcheck
-    - exportloopref
     - gochecknoinits
     - goconst
     - gocritic
