--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: set up go
         uses: actions/setup-go@v5
+        cache-dependency-path: backend/
         with:
           go-version: "1.22"
         id: go
